--- a/client/index.html
+++ b/client/index.html
@@ -20,9 +20,9 @@
 </head>
 <body layout="column" ng-app="logInApp" ng-cloak>
 <header layout="row">
-  <md-toolbar layout layout-align="space-around center">
+  <md-toolbar layout layout-align="space-around center" style="background-color: #00274e; color: rgb(60, 161, 255);">
     <div>
-      <h3 ng-show="currentUser">Welcome, {{ currentUser.email }}</h3>
+      <h3 ng-show="currentUser" class="title">Welcome, {{ currentUser.email }}</h3>
     </div>
     <div layout layout>
       <md-button ng-show="currentUser" ui-sref="logout" class="md-padding">Log Out</md-button>
@@ -30,7 +30,7 @@
   </md-toolbar>
 
 </header>
-<main layout layout-align="center" ui-view ng-cloak style="border: solid thin red"></main>
+<main layout layout-align="center" ui-view ng-cloak></main>
 <footer>
 
 </footer>
@@ -55,6 +55,7 @@
 <script src="js/mainController.js"></script>
 <script src="auth/authController.js"></script>
 <script src="auth/authService.js"></script>
+<script src="update/updateController.js"></script>
 
 </body>
 </html>
