--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
 
 </header>
 <main layout layout-align="center" ui-view ng-cloak></main>
-<footer>
+<footer device-detector="">
 
 </footer>
 
@@ -51,14 +51,17 @@
 
 <!-- Angular Material Library -->
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-
+<script src="https://rawgit.com/srfrnk/re-tree/master/re-tree.js" type="text/javascript"></script>
+<script src="https://rawgit.com/srfrnk/ng-device-detector/master/ng-device-detector.js" type="text/javascript"></script>
 <!-- Your application bootstrap  -->
 <script src="js/app.js"></script>
 <script src="js/lb-services.js"></script>
-<script src="js/downloadController.js"></script>
+<script src="downloads/downloadController.js"></script>
 <script src="auth/authController.js"></script>
 <script src="auth/authService.js"></script>
-<script src="update/confirmationController.js"></script>
+<script src="confirms/confirmationController.js"></script>
+
+
 
 </body>
 </html>
