--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,7 @@
 <script src="auth/authController.js"></script>
 <script src="auth/authService.js"></script>
 <script src="confirms/confirmationController.js"></script>
+<script src="issue-reports/issueReportController.js"></script>
 
 
 
