--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
     <div layout layout>
       <md-button ng-show="currentUser" ui-sref="download" class="md-padding">Downloads</md-button>
       <md-button ng-show="currentUser" ui-sref="confirm-update" class="md-padding">Confirm Update</md-button>
-      <md-button ng-show="currentUser" ui-sref="#" class="md-padding">Report Issue</md-button>
+      <md-button ng-show="currentUser" ui-sref="issue-report" class="md-padding">Report Issue</md-button>
       <md-button ng-show="currentUser" ui-sref="logout" class="md-padding">Log Out</md-button>
     </div>
   </md-toolbar>
