--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -1,18 +1,17 @@
-<!--HTML Here-->
-<div layout="row">
-  <form layout="column">
-    <md-input-contianer style="margin: 20px 10px 40px 10px;">
+<div layout="column" class="md-padding"
+     style="margin-top: 8rem; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
+<div >
+  <form name="reportIssueForm" ng-submit="#">
+    <md-input-container style="margin: 20px 10px 40px 10px;">
       <span class="md-subhead">* <i>Required</i></span>
-      <label>Select Issue:</label>
-      <md-select ng-model="issueReport" required>
-        <md-option ng-repeat="reason in issueType" value="{{reason}}">{{reason}}</md-option>
+      <label>Select a reason:</label>
+      <md-select ng-model="update.version" required>
+        <md-option ng-repeat="issue in issueType" value="{{issue}}">{{issue}}</md-option>
       </md-select>
-    </md-input-contianer>
-    <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
+    </md-input-container>
     <div>
-      <md-button type="submit">Submit</md-button>
+      <md-button class="md-raised md-primary" type="submit" ng-disabled="reportIssueForm.$invalid" style="color:white; width: 330px; height:40px">Submit</md-button>
     </div>
-</form>
-
+  </form>
 </div>
-
+</div>
