--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -24,7 +24,9 @@
 
   <div layout="column" layout-align="center center" device-detector>
     <p id="demo">Getting location...</p>
+        <p> {{ data.os }}</p>
         <p>Operating System: {{ data.os_version }}</p>
+
   </div>
 
 
