--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -1,5 +1,5 @@
 <div layout="column" class="md-padding"
-     style="margin-top: 8rem; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
+     style=" height:100vh; margin-top: 8rem; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
   <div layout layout-align="center">
     <h3>FSV42 Update</h3>
   </div>
