--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
   </md-toolbar>
 
 </header>
-<main layout layout-align="center start" ui-view ng-cloak class="md-padding" style="background-color:#00c1d5;"></main>
+<main layout layout-align="center start" ui-view ng-cloak class="md-padding" style="background-color:white;"></main>
 <footer>
 </footer>
 </div>
