--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -1,17 +1,31 @@
 <div layout="column" class="md-padding"
-     style="margin-top: 8rem; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
-<div >
-  <form name="reportIssueForm" ng-submit="#">
-    <md-input-container style="margin: 20px 10px 40px 10px;">
+     style="margin: 4rem; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
+<div ng-if="msgStatus == 0">
+  <form layout="column" name="reportIssueForm" ng-submit="report(update.version,update.issue,comments)">
+    <md-input-container style="margin: 1rem 0;">
       <span class="md-subhead">* <i>Required</i></span>
-      <label>Select a reason:</label>
-      <md-select ng-model="update.version" required>
+      <p class="md-subhead">Please select a reason: </p>
+      <label>I am unable to...</label>
+      <md-select ng-model="update.issue" required>
         <md-option ng-repeat="issue in issueType" value="{{issue}}">{{issue}}</md-option>
       </md-select>
     </md-input-container>
+    <md-input-container>
+      <span class="md-subhead">* <i>Required</i></span>
+      <label>Update version:</label>
+      <md-select ng-model="update.version" required>
+        <md-option ng-repeat="version in updateVersion" value="{{version}}">{{version}}</md-option>
+      </md-select>
+    </md-input-container>
     <div>
+      <textarea ng-model="comments" name="comments" id="comments" cols="50" rows="6" style="border-radius: 2%; border: solid thin lightgray;"></textarea>
+    </div>
+    <div layout layout-align="center start" style="margin: 1rem;">
       <md-button class="md-raised md-primary" type="submit" ng-disabled="reportIssueForm.$invalid" style="color:white; width: 330px; height:40px">Submit</md-button>
     </div>
   </form>
 </div>
+  <div ng-if="msgStatus==1">
+    <p>{{ confirmation }}</p>
+  </div>
 </div>
