--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -1,5 +1,5 @@
 <div layout="column" class="md-padding"
-     style="margin: 4rem 0; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
+     style="margin: 4rem 0; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px;">
   <div layout layout-align="center">
     <h3>FSV42 Update</h3>
   </div>
@@ -14,7 +14,7 @@
         </md-select>
       </md-input-container>
       <div>
-        <md-button class="md-raised md-primary" type="submit" ng-disabled="confirmationForm.$invalid" style="color:white; width: 330px; height:45px">Confirm Installation</md-button>
+        <md-button class="md-raised md-primary" type="submit" ng-disabled="confirmationForm.$invalid" style=" color:white; width: 330px; height:45px">Confirm Installation</md-button>
       </div>
     </form>
   </div>
