--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -1,5 +1,5 @@
 <div layout="column" class="md-padding"
-     style="margin: 4rem; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
+     style="margin: 4rem; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px;">
 <div ng-if="msgStatus == 0">
   <form layout="column" name="reportIssueForm" ng-submit="report(update.version,update.issue,comments)">
     <md-input-container style="margin: 1rem 0;">
