--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -1,5 +1,5 @@
-<div layout="column" class="md-padding"
-     style="margin: 4rem; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px;">
+<div flex="35" flex-xs="100" layout="column" class="md-padding"
+     style="margin: 2rem 0; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px;">
 <div ng-if="msgStatus == 0">
   <form layout="column" name="reportIssueForm" ng-submit="report(update.version,update.issue,comments)">
     <md-input-container style="margin: 1rem 0;">
@@ -17,11 +17,11 @@
         <md-option ng-repeat="version in updateVersion" value="{{version}}">{{version}}</md-option>
       </md-select>
     </md-input-container>
-    <div>
-      <textarea ng-model="comments" name="comments" id="comments" cols="50" rows="6" style="border-radius: 2%; border: solid thin lightgray;"></textarea>
+    <div layout layout-align="center">
+      <textarea flex="100" ng-model="comments" name="comments" id="comments" cols="50" rows="6" style="border-radius: 2%; border: solid thin lightgray;"></textarea>
     </div>
     <div layout layout-align="center start" style="margin: 1rem;">
-      <md-button class="md-raised md-primary" type="submit" ng-disabled="reportIssueForm.$invalid" style="color:white; width: 330px; height:40px">Submit</md-button>
+      <md-button class="md-raised md-primary" type="submit" ng-disabled="reportIssueForm.$invalid" style="color:white; width: 250px; height:40px">Submit</md-button>
     </div>
   </form>
 </div>
