--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -1,32 +1,32 @@
-<div flex="35" flex-xs="100" layout="column" class="md-padding"
-     style="margin: 4rem 0; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px;">
-  <div layout layout-align="center">
-    <h3>FSV42 Update</h3>
+
+  <span class="md-subhead">Update Confirmation</span>
+  <div flex="65" flex-xs="100" layout="column" class="md-padding"
+       style="margin: 1rem 0; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px;">
+    <div ng-if="msgStatus == 0">
+      <form name="confirmationForm" ng-submit="confirm(update.version)">
+        <md-input-container layout="column" layout-align="center">
+          <span class="md-subhead">* <i>Required</i></span>
+          <label>Update version:</label>
+          <md-select ng-model="update.version" required>
+            <md-option ng-repeat="version in updateVersion" value="{{version}}">{{version}}</md-option>
+          </md-select>
+        </md-input-container>
+        <div layout layout-align="center">
+          <md-button class="md-raised md-primary" type="submit" ng-disabled="confirmationForm.$invalid" style=" color:white; height:45px">Confirm Installation</md-button>
+        </div>
+      </form>
+    </div>
+    <div ng-if="msgStatus==1">
+      <p>{{ confirmation }}</p>
+    </div>
+
+    <div layout="column" layout-align="center center" device-detector>
+      <p id="demo">Getting location...</p>
+      <p>Operating System: {{ data.os }}</p>
+      <p>Version: {{ data.os_version }}</p>
+
+    </div>
+
   </div>
 
-  <div ng-if="msgStatus == 0">
-    <form name="confirmationForm" ng-submit="confirm(update.version)">
-      <md-input-container layout="column" layout-align="center">
-        <span class="md-subhead">* <i>Required</i></span>
-        <label>Update version:</label>
-        <md-select ng-model="update.version" required>
-          <md-option ng-repeat="version in updateVersion" value="{{version}}">{{version}}</md-option>
-        </md-select>
-      </md-input-container>
-      <div layout layout-align="center">
-        <md-button class="md-raised md-primary" type="submit" ng-disabled="confirmationForm.$invalid" style=" color:white; width:250px; height:45px">Confirm Installation</md-button>
-      </div>
-    </form>
-  </div>
-  <div ng-if="msgStatus==1">
-    <p>{{ confirmation }}</p>
-  </div>
 
-  <div layout="column" layout-align="center center" device-detector>
-    <p id="demo">Getting location...</p>
-        <p>Operating System: {{ data.os }}</p>
-        <p>Version: {{ data.os_version }}</p>
-
-  </div>
-
-</div>
