fixing conf form height

--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -1,7 +1,7 @@
 
   <span class="md-subhead">Update Confirmation</span>
   <div flex="65" flex-xs="100" layout="column" class="md-padding"
-       style="margin: 1rem 0; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px;">
+       style="margin: 2rem 0; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px; height:100%">
     <div ng-if="msgStatus == 0">
       <form name="confirmationForm" ng-submit="confirm(update.version)">
         <md-input-container layout="column" layout-align="center">
