--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -1,6 +1,6 @@
 
   <span class="md-subhead">Update Confirmation</span>
-  <div flex="65" flex-xs="100" layout="row" class="md-padding"
+  <div flex="65" flex-xs="100" layout="column" class="md-padding"
        style="margin: 2rem 0; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px; height:100%">
     <div layout="column">
       <div ng-if="msgStatus == 0">
@@ -30,5 +30,7 @@
     </div>
 
   </div>
+
+
 
 
