--- a/client/index.html
+++ b/client/index.html
@@ -60,7 +60,7 @@
       </md-list>
     </md-content>
   </md-sidenav>
-  <main flex layout="column" layout-align="center center" ui-view ng-cloak class="md-padding" style="background-color:white; border: solid thin red"></main>
+  <main flex layout="column" layout-align="center center" ui-view ng-cloak class="md-padding" style="background-color:white;"></main>
 </div>
 
 <footer ng-show="currentUser" hide-sm hide-gt-xs layout layout-align="space-around center"  class="md-padding">
@@ -74,13 +74,13 @@
   <button ng-show="currentUser" ui-sref="confirm-update" hide-sm hide-gt-xs class="md-caption" style="background-color: transparent; border: none;">
     <div layout="column" layout-align="start">
       <i class="material-icons">done_all</i>
-      Confirm Update
+      Confirm
     </div>
   </button>
   <button ng-show="currentUser" ui-sref="report-issue" hide-sm hide-gt-xs class="md-caption" style="background-color: transparent; border: none;">
     <div layout="column" layout-align="start">
       <i class="material-icons">bug_report</i>
-      Report Issue
+      Issue
     </div>
   </button>
   <button ng-show="currentUser" hide-sm hide-gt-xs ng-click="openLeftMenu()" class="md-caption" style="background-color: transparent; border: none;">
