--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -1,6 +1,6 @@
 <span class="md-subhead">Issue Report</span>
 <div flex="100" flex-xs="100" layout="column" layout-align="center center" class="md-padding"
-     style="margin: 5px 0; background-color: rgb(221, 221, 221); border: solid thin whitesmoke; border-radius: 5px;">
+     style="margin: 5px 0; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
 <div ng-if="msgStatus == 0">
   <form layout="column" name="reportIssueForm" ng-submit="report(update.version,update.issue,comments)">
     <md-input-container style="margin: 1rem 0;">
