--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -1,6 +1,6 @@
 
   <span class="md-subhead">Update Confirmation</span>
-  <div  class="md-padding"
+  <div  flex flex-xs="100" class="md-padding"
        style="margin: 2rem 0; background-color: transparent; border: solid thin whitesmoke; border-radius: 5px; width:55vw; height:100%">
     <div style="width:80%">
       <div ng-if="msgStatus == 0">
