--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -1,8 +1,8 @@
 
   <span class="md-subhead">Update Confirmation</span>
-  <div  flex flex-xs="100" class="md-padding"
-       style="margin: 2rem 0; background-color: transparent; border: solid thin whitesmoke; border-radius: 5px; width:55vw; height:100%">
-    <div style="width:80%">
+  <div  flex="80" flex-xs="100" class="md-padding"
+       style="margin: 2rem 0; background-color: transparent; border: solid thin whitesmoke; border-radius: 5px; height:100%">
+    <div>
       <div ng-if="msgStatus == 0">
         <form name="confirmationForm" ng-submit="confirm(update.version)">
           <md-input-container layout="column" layout-align="center">
