--- a/client/index.html
+++ b/client/index.html
@@ -68,7 +68,7 @@
       </md-list>
     </md-content>
   </md-sidenav>
-  <main flex layout="column" layout-align="center center" ui-view ng-cloak class="md-padding" style="background-color:white; height:90vh;"></main>
+  <main flex layout="column" layout-align="center" ui-view ng-cloak class="md-padding" style="background-color:white; height:90vh;"></main>
 </div>
 
 <footer ng-show="currentUser" hide-sm hide-gt-xs layout layout-align="space-around center"  class="md-padding">
