--- a/client/index.html
+++ b/client/index.html
@@ -75,8 +75,8 @@
   <!-- to keep the menu item to the right it should appear last -->
   <button ng-show="currentUser" ui-sref="download" hide-sm hide-gt-xs class="md-caption" style="background-color: transparent; border: none;">
     <div layout="column" layout-align="start">
-      <i class="material-icons">file_download</i>
-      Downloads
+      <i class="material-icons">person_outline</i>
+      Dashboard
     </div>
   </button>
   <button ng-show="currentUser" ui-sref="confirm-update" hide-sm hide-gt-xs class="md-caption">
@@ -127,6 +127,7 @@
 <script src="auth/authService.js"></script>
 <script src="confirms/confirmationController.js"></script>
 <script src="issue-reports/issueReportController.js"></script>
+  <script src="dashboard/dashboardController.js"></script>
 
 
 
